--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,6 @@ category.not-found=Category not found
 category.name-already-exists=Category Name already exists
 category.subcategory.name-already-exists=Sub Category Name already exists
 category.subcategory.not-found=Sub Category not found
+
+# User
+user.not-found=User not found
